--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
    rel="stylesheet"
   />
-  <link rel="stylesheet" href="./css/global.css" />
+  <link rel="stylesheet" href="./global.css" />
   <title>Britlex</title>
  </head>
  <body>
